--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -11,28 +11,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Git Credentials setzen
-        run: |
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      - name: Python installieren
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Cache-ID anzeigen
-        run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-      - name: Cache nutzen
-        uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
-      - name: MkDocs installieren
-        run: pip install mkdocs-material 
-      - name: GitHub Pages veröffentlichen
-        run: mkdocs gh-deploy --force
+      - name: Projekt herunterladen
+        uses: actions/checkout@v2
+
+      - name: Dokumentation hochladen
+        uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CUSTOM_DOMAIN: help.streckenkunde.dennis-heinri.ch
+          CONFIG_FILE: mkdocs.yml
+          EXTRA_PACKAGES: build-base
+          REQUIREMENTS: folder/requirements.txt
