GDPR Compliance und Volltextsuche

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,11 @@ theme:
     accent: teal
   features:
     - navigation.footer
+
+plugins:
+  - privacy
+  - search
+
 extra:
   generator: false
   social:
