--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -21,3 +21,4 @@ jobs:
           CUSTOM_DOMAIN: help.streckenkunde.dennis-heinri.ch
           CONFIG_FILE: mkdocs.yml
           EXTRA_PACKAGES: build-base
+          REQUIREMENTS: requirements.txt
