--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Projekt herunterladen
         uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-cffi libcairo2 libpango-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info
+
       - name: Dokumentation hochladen
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
