--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -18,6 +18,6 @@ jobs:
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CUSTOM_DOMAIN: help.streckenkunde.dennis-heinri.ch
+          CUSTOM_DOMAIN: help.streckenkunde.digital
           CONFIG_FILE: mkdocs.yml
           EXTRA_PACKAGES: build-base
